# claude_code_usage_dashboard_gpui

./: .env.example  .gitignore  Cargo.toml  README.md  SETUP.md  config.example.json
.github/: CODEOWNERS
src/: main.rs
src/api/: mod.rs  pipedrive.rs  propstream.rs
src/config/: mod.rs
src/dashboard/: actions.rs  mod.rs  view.rs
src/db/: mod.rs  repository.rs  schema.sql
src/filters/: mod.rs  qualifier.rs  scorer.rs
src/integration/: engine.rs  mod.rs  sync.rs
src/models/: criteria.rs  lead.rs  mod.rs  property.rs  stats.rs
